# handlers/v1-path-multiple-couriers-get.go
@@ -7,8 +7,8 @@ import (
 )
 
 func GetV1PathMultipleCouriers(w http.ResponseWriter, r *http.Request) {
-	var courier lstruct.Courier
-	err := json.NewDecoder(r.Body).Decode(&courier)
+	var pathMSRequest lstruct.PathMultipleStartRequest
+	err := json.NewDecoder(r.Body).Decode(&pathMSRequest)
 	if err != nil {
 		errorResponse := lstruct.ErrorResponse{
 			Message: "Bad Input",
@@ -17,25 +17,6 @@ func GetV1PathMultipleCouriers(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	res := lstruct.IsCorrectCorier(courier)
-	if res != 0 {
-		var errorResponse lstruct.ErrorResponse
-		if res == 1 {
-			errorResponse = lstruct.ErrorResponse{
-				Message: "Uncorrect courier ID",
-			}
-		} else if res == 2 {
-			errorResponse = lstruct.ErrorResponse{
-				Message: "Longitude out of range",
-			}
-		} else if res == 3 {
-			errorResponse = lstruct.ErrorResponse{
-				Message: "Latitude out of range",
-			}
-		}
-		SendJSONResponse(w, http.StatusBadRequest, errorResponse)
-		return
-	}
 	response := lstruct.ErrorResponse{
 		Message: "Not implemented",
 	}
